# ImageSegmentation-GPU

./: README.md
segmentacao/: CMakeLists.txt  cmake_install.cmake  imagem.h  main_cuda.cu  main_seq.cpp  main_seq.cu  runNvgraph.py  runSeq.py  saida.pgm  segmentacao_cuda  teste1.pgm
segmentacao/outputs/: teste1_nvgraph.pgm  teste1_seq.pgm
segmentacao/segmentacao/: CMakeCache.txt  Makefile  edge  edge.cu  funcs.cpp  imagem.h  main_cuda.cu  main_seq.cpp  mona_lisa.pgm  saida.pgm  segmentacao_cuda  segmentacao_sequencial  teste1.pgm
